alignment fix

--- a/style.scss
+++ b/style.scss
@@ -292,8 +292,8 @@ body {
         position: absolute;
         display: flex;
         & .dot {
-            width: 8px;
-            height: 8px;
+            width: 0.5rem;
+            height: 0.5rem;
             border-radius: 50%;
             background: $text-p;
             margin-right: 0.4rem;
@@ -309,13 +309,13 @@ body {
 .text-content {
     text-align: center;
     h1 {
-        font-size: 40px;
+        font-size: 2.5rem;
         font-weight: 500;
         margin-bottom: 1.375rem;
         color: $text-heading;
     }
     p {
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 400;
         line-height: 1.8;
         color: $text-p;
@@ -452,16 +452,24 @@ $msg: 8;
     }
     .container {
         display: flex;
-        max-width: 55rem;
+        max-width: 60rem;
         align-items: center;
         padding-top: 9rem;
     }
     .show-case {
         max-width: 245px;
-        margin-right: 7.5rem;
+        margin-right: 8rem;
+        margin-left: 5rem;
     }
     .text-content {
         flex: 1;
         text-align: left;
+        h1 {
+            margin-bottom: 1.5rem;
+        }
+        p {
+            line-height: 1.7;
+            margin-bottom: 3.5rem;
+        }
     }
 }
